--- a/gallery.html
+++ b/gallery.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Argantara Diratama - About</title>
-  <link href="./output.css" rel="stylesheet">
+  <link href="src/output.css" rel="stylesheet">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-  <link rel="icon" href="/img/logo 2.png">
+  <link rel="icon" href="src/img/logo 2.png">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
   <style>
     html {
@@ -50,18 +50,18 @@
   <nav class="fixed top-4 z-50 flex justify-between items-center px-12 w-1480 h-100
             bg-[#222831]/50 backdrop-blur-md rounded-4xl">
     <div class="flex items-center gap-3">
-      <img src="/img/logo 1.png" alt="logo" class="h-14" />
+      <img src="src/img/logo 1.png" alt="logo" class="h-14" />
     </div>
     <div class="flex gap-8 text-xl">
-      <a href="/src/index.html" class="hover:text-[#DFD0B8] transition duration-300 ease-in-out">Home</a>
-      <a href="/src/about.html" class="hover:text-[#DFD0B8] transition duration-300 ease-in-out">About</a>
-      <a href="/src/proker.html" class="hover:text-[#DFD0B8] transition duration-300 ease-in-out">Program Kerja</a>
-      <a href="/src/gallery.html" class="hover:text-[#DFD0B8] transition duration-300 ease-in-out">Gallery</a>
+      <a href="/index.html" class="hover:text-[#DFD0B8] transition duration-300 ease-in-out">Home</a>
+      <a href="/about.html" class="hover:text-[#DFD0B8] transition duration-300 ease-in-out">About</a>
+      <a href="/proker.html" class="hover:text-[#DFD0B8] transition duration-300 ease-in-out">Program Kerja</a>
+      <a href="/gallery.html" class="hover:text-[#DFD0B8] transition duration-300 ease-in-out">Gallery</a>
     </div>
   </nav>
   <!-- Hero Section -->
   <section class="relative w-full flex justify-center items-center h-[1000px] overflow-hidden">
-    <img src="/img/bg.png" class="absolute inset-0 w-full h-full object-cover brightness-50" alt="background"
+    <img src="src/img/bg.png" class="absolute inset-0 w-full h-full object-cover brightness-50" alt="background"
       loading="lazy" />
     <div data-aos="fade-up" data-aos-anchor-placement="center-bottom" class="relative z-10 text-center">
       <h1 class="text-7xl font-stretch-50% font-bold uppercase pb-5">Our Gallery</h1>
@@ -84,8 +84,8 @@
           Menciptakan
           Lingkungan Yang Nyaman Bagi Seluruh Siswa/i Yang Berlandaskan Kepada Al Qur'an Dan Hadits</p>
         <div class="flex gap-3 mt-2">
-          <div class="w-6 h-6"><img src="/img/Instagram.png" alt=""></div>
-          <div class="w-6 h-6"><img src="/img/YouTube.png" alt=""></div>
+          <div class="w-6 h-6"><img src="src/img/Instagram.png" alt=""></div>
+          <div class="w-6 h-6"><img src="src/img/YouTube.png" alt=""></div>
         </div>
       </div>
       <!-- Quick Link -->
