--- a/about.html
+++ b/about.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Argantara Diratama - About</title>
-  <link href="./output.css" rel="stylesheet">
+  <link href="src/output.css" rel="stylesheet">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-  <link rel="icon" href="/img/logo 2.png">
+  <link rel="icon" href="src/img/logo 2.png">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
   <style>
     html {
@@ -50,18 +50,18 @@
   <nav class="fixed top-4 z-50 flex justify-between items-center px-12 w-1480 h-100
             bg-[#222831]/50 backdrop-blur-md rounded-4xl">
     <div class="flex items-center gap-3">
-      <img src="/img/logo 1.png" alt="logo" class="h-14" />
+      <img src="src/img/logo 1.png" alt="logo" class="h-14" />
     </div>
     <div class="flex gap-8 text-xl">
-      <a href="/src/index.html" class="hover:text-[#DFD0B8] transition duration-300 ease-in-out">Home</a>
-      <a href="/src/about.html" class="hover:text-[#DFD0B8] transition duration-300 ease-in-out">About</a>
-      <a href="/src/proker.html" class="hover:text-[#DFD0B8] transition duration-300 ease-in-out">Program Kerja</a>
-      <a href="/src/gallery.html" class="hover:text-[#DFD0B8] transition duration-300 ease-in-out">Gallery</a>
+      <a href="/index.html" class="hover:text-[#DFD0B8] transition duration-300 ease-in-out">Home</a>
+      <a href="/about.html" class="hover:text-[#DFD0B8] transition duration-300 ease-in-out">About</a>
+      <a href="/proker.html" class="hover:text-[#DFD0B8] transition duration-300 ease-in-out">Program Kerja</a>
+      <a href="/gallery.html" class="hover:text-[#DFD0B8] transition duration-300 ease-in-out">Gallery</a>
     </div>
   </nav>
   <!-- Hero Section -->
   <section class="relative w-full flex justify-center items-center h-[1000px] overflow-hidden">
-    <img src="/img/bg.png" class="absolute inset-0 w-full h-full object-cover brightness-50" alt="background"
+    <img src="src/img/bg.png" class="absolute inset-0 w-full h-full object-cover brightness-50" alt="background"
       loading="lazy" />
     <div data-aos="fade-up" data-aos-anchor-placement="center-bottom" class="relative z-10 text-center">
       <h1 class="text-7xl font-stretch-50% font-bold uppercase pb-5">ABOUT</h1>
@@ -75,7 +75,7 @@
 
     <!-- Bagian ATAS: Tentang Organisasi -->
     <div class="flex gap-6 items-center px-28">
-      <img data-aos="fade-up" src="/img/bg.png" class="bg-gray-300 w-3/5 h-[500px] rounded-lg mr-8 shadow-2xl"></img>
+      <img data-aos="fade-up" src="src/img/bg.png" class="bg-gray-300 w-3/5 h-[500px] rounded-lg mr-8 shadow-2xl"></img>
       <div data-aos="fade-up" class="flex flex-col w-2/5">
         <h1 class="text-5xl font-bold pb-12 text-[#e6e0d5]">Argantara Diratama</h1>
         <div class="text-xl leading-relaxed space-y-4 max-w-4xl">
@@ -113,7 +113,7 @@
         </ul>
 
         <!-- Logo -->
-        <img src="/img/logo 2.png" alt="Logo OSIS" class="w-96 h-96 object-contain rounded-full" />
+        <img src="src/img/logo 2.png" alt="Logo OSIS" class="w-96 h-96 object-contain rounded-full" />
       </div>
     </div>
 
@@ -126,7 +126,7 @@
 
     <!-- Inti -->
     <h3 data-aos="fade-up" class="text-white text-2xl font-bold mb-12">Pengurus Inti</h3>
-    <img data-aos="fade-up" src="/img/inti baru.png" alt="inti" class="w-[1229px] h-[586px]">
+    <img data-aos="fade-up" src="src/img/inti baru.png" alt="inti" class="w-[1229px] h-[586px]">
 
     <!-- Sekbid -->
     <h3 data-aos="fade-up" class="text-white text-2xl font-bold mt-24">Seksi Bidang</h3>
@@ -135,7 +135,7 @@
         <div data-aos="fade-up">
           <div
             class="w-[470px] h-[430px] bg-[#393E46] rounded-2xl shadow-2xl flex flex-col items-center hover:translate-y-1 transition duration-300 ease-in-out">
-            <img src="/img/sekbid 1.jpg" alt="sekbid 1" class="w-full rounded-2xl">
+            <img src="src/img/sekbid 1.jpg" alt="sekbid 1" class="w-full rounded-2xl">
             <h3 class="font-bold text-3xl mt-4">Sekbid 1</h3>
             <div class="w-[200px] h-0.5 bg-white my-2"></div>
             <p class="text-2xl italic">Kerohanian</p>
@@ -144,7 +144,7 @@
         <div data-aos="fade-up">
           <div
             class="w-[470px] h-[430px] bg-[#393E46] rounded-2xl shadow-2xl flex flex-col items-center hover:translate-y-1 transition duration-300 ease-in-out">
-            <img src="/img/sekbid 2.jpg" alt="sekbid 2" class="w-full rounded-2xl">
+            <img src="src/img/sekbid 2.jpg" alt="sekbid 2" class="w-full rounded-2xl">
             <h3 class="font-bold text-3xl mt-4">Sekbid 2</h3>
             <div class="w-[200px] h-0.5 bg-white my-2"></div>
             <p class="text-2xl italic">Kaderisasi</p>
@@ -153,7 +153,7 @@
         <div data-aos="fade-up">
           <div
             class="w-[470px] h-[430px] bg-[#393E46] rounded-2xl shadow-2xl flex flex-col items-center hover:translate-y-1 transition duration-300 ease-in-out">
-            <img src="/img/sekbid 3.jpg" alt="sekbid 3" class="w-full rounded-2xl">
+            <img src="src/img/sekbid 3.jpg" alt="sekbid 3" class="w-full rounded-2xl">
             <h3 class="font-bold text-3xl mt-4">Sekbid 3</h3>
             <div class="w-[200px] h-0.5 bg-white my-2"></div>
             <p class="text-2xl italic">Akademik & Non Akademik</p>
@@ -164,7 +164,7 @@
         <div data-aos="fade-up">
           <div
             class="w-[470px] h-[430px] bg-[#393E46] rounded-2xl shadow-2xl flex flex-col items-center hover:translate-y-1 transition duration-300 ease-in-out">
-            <img src="/img/sekbid 4.jpg" alt="sekbid 4" class="w-full rounded-2xl">
+            <img src="src/img/sekbid 4.jpg" alt="sekbid 4" class="w-full rounded-2xl">
             <h3 class="font-bold text-3xl mt-4">Sekbid 4</h3>
             <div class="w-[200px] h-0.5 bg-white my-2"></div>
             <p class="text-2xl italic">Ekonomi Kreatif</p>
@@ -173,7 +173,7 @@
         <div data-aos="fade-up">
           <div
             class="w-[470px] h-[430px] bg-[#393E46] rounded-2xl shadow-2xl flex flex-col items-center hover:translate-y-1 transition duration-300 ease-in-out">
-            <img src="/img/skbid 5.jpg" alt="sekbid 5" class="w-full rounded-2xl">
+            <img src="src/img/skbid 5.jpg" alt="sekbid 5" class="w-full rounded-2xl">
             <h3 class="font-bold text-3xl mt-4">Sekbid 5</h3>
             <div class="w-[200px] h-0.5 bg-white my-2"></div>
             <p class="text-2xl italic">Kesehatan</p>
@@ -182,7 +182,7 @@
         <div data-aos="fade-up">
           <div
             class="w-[470px] h-[430px] bg-[#393E46] rounded-2xl shadow-2xl flex flex-col items-center hover:translate-y-1 transition duration-300 ease-in-out">
-            <img src="/img/sekbid 6.jpg" alt="sekbid 6" class="w-full rounded-2xl">
+            <img src="src/img/sekbid 6.jpg" alt="sekbid 6" class="w-full rounded-2xl">
             <h3 class="font-bold text-3xl mt-4">Sekbid 6</h3>
             <div class="w-[200px] h-0.5 bg-white my-2"></div>
             <p class="text-2xl italic">Kominfo</p>
@@ -202,8 +202,8 @@
           Menciptakan
           Lingkungan Yang Nyaman Bagi Seluruh Siswa/i Yang Berlandaskan Kepada Al Qur'an Dan Hadits</p>
         <div class="flex gap-3 mt-2">
-          <div class="w-6 h-6"><img src="/img/Instagram.png" alt=""></div>
-          <div class="w-6 h-6"><img src="/img/YouTube.png" alt=""></div>
+          <div class="w-6 h-6"><img src="src/img/Instagram.png" alt=""></div>
+          <div class="w-6 h-6"><img src="src/img/YouTube.png" alt=""></div>
         </div>
       </div>
       <!-- Quick Link -->
