--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Argantara Diratama - Home</title>
-  <link href="./output.css" rel="stylesheet">
+  <link href="src/output.css" rel="stylesheet">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-  <link rel="icon" href="/img/logo 2.png">
+  <link rel="icon" href="src/img/logo 2.png">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
   <style>
     html {
@@ -50,18 +50,18 @@
   <nav class="fixed top-4 z-50 flex justify-between items-center px-12 w-1480 h-100
             bg-[#222831]/50 backdrop-blur-md rounded-4xl">
     <div class="flex items-center gap-3">
-      <img src="/img/logo 1.png" alt="logo" class="h-14" />
+      <img src="src/img/logo 1.png" alt="logo" class="h-14" />
     </div>
     <div class="flex gap-8 text-xl">
-      <a href="/src/index.html" class="hover:text-[#DFD0B8] transition duration-300 ease-in-out">Home</a>
-      <a href="/src/about.html" class="hover:text-[#DFD0B8] transition duration-300 ease-in-out">About</a>
-      <a href="/src/proker.html" class="hover:text-[#DFD0B8] transition duration-300 ease-in-out">Program Kerja</a>
-      <a href="/src/gallery.html" class="hover:text-[#DFD0B8] transition duration-300 ease-in-out">Gallery</a>
+      <a href="index.html" class="hover:text-[#DFD0B8] transition duration-300 ease-in-out">Home</a>
+      <a href="about.html" class="hover:text-[#DFD0B8] transition duration-300 ease-in-out">About</a>
+      <a href="proker.html" class="hover:text-[#DFD0B8] transition duration-300 ease-in-out">Program Kerja</a>
+      <a href="gallery.html" class="hover:text-[#DFD0B8] transition duration-300 ease-in-out">Gallery</a>
     </div>
   </nav>
   <!-- Hero Section -->
   <section class="relative w-full flex justify-center items-center h-[1000px] overflow-hidden">
-    <img src="/img/bg.png" class="absolute inset-0 w-full h-full object-cover brightness-50" alt="background"
+    <img src="src/img/bg.png" class="absolute inset-0 w-full h-full object-cover brightness-50" alt="background"
       loading="lazy" />
     <div data-aos="fade-up" data-aos-anchor-placement="center-bottom" class="relative z-10 text-center">
       <h1 class="text-6xl font-bold uppercase pb-5">ARGANTARA DIRATAMA</h1>
@@ -98,7 +98,7 @@
         <div
           class="bg-gray-700 rounded-3xl p-6 w-470 h-300 flex flex-col items-center text-center shadow-2xl hover:translate-y-2 duration-300 ease-in-out">
           <div class="w-20 h-20 rounded-full bg-gray-500 mb-6 flex justify-center items-center">
-            <img src="/img/quran-quran-svgrepo-com.svg" alt="Quran" class="w-8 h-8 shadow-2xl">
+            <img src="src/img/quran-quran-svgrepo-com.svg" alt="Quran" class="w-8 h-8 shadow-2xl">
           </div>
           <p class="font-24 leading-snug">
             Menjadikan Siswa/i Berakhlak Islami Dengan Berlandaskan Alquran Dan Hadits
@@ -109,7 +109,7 @@
         <div
           class="bg-gray-700 rounded-3xl p-6 w-470 h-300 flex flex-col items-center text-center shadow-2xl hover:translate-y-2 duration-300 ease-in-out">
           <div class="w-20 h-20 rounded-full bg-gray-500 mb-6 flex justify-center items-center">
-            <img src="/img/stopwatch-svgrepo-com.svg" alt="" class="w-8 h-8 shadow-2xl">
+            <img src="src/img/stopwatch-svgrepo-com.svg" alt="" class="w-8 h-8 shadow-2xl">
           </div>
           <p class="font-24 leading-snug">
             Membangunkan Kedisiplinan Dalam Pelajaran Maupun Peraturan Untuk Seluruh Siswa/i
@@ -120,7 +120,7 @@
         <div
           class="bg-gray-700 rounded-3xl p-6 w-470 h-300 flex flex-col items-center text-center shadow-2xl hover:translate-y-2 duration-300 ease-in-out">
           <div class="w-20 h-20 rounded-full bg-gray-500 mb-6 flex justify-center items-center">
-            <img src="/img/paintbrush-and-palette-svgrepo-com.svg" alt="" class="w-8 h-8 shadow-2xl">
+            <img src="src/img/paintbrush-and-palette-svgrepo-com.svg" alt="" class="w-8 h-8 shadow-2xl">
           </div>
           <p class="font-24 leading-snug">
             Menyelenggarakan Kegiatan Yang Berpotensi Menaikkan Kreativitas Dan Inovasi Bagi Siswa/i
@@ -138,12 +138,12 @@
         <div class="relative w-[708px] h-[340px] overflow-hidden rounded-3xl shadow-lg">
           <!-- Carousel wrapper -->
           <div id="carousel" class="flex transition-transform duration-700 ease-in-out">
-            <img src="/img/JZN00920.JPG" class="w-[708px] h-[340px] object-cover flex-shrink-0" alt="Slide 1">
-            <img src="/img/JZN08605.JPG" class="w-[708px] h-[340px] object-cover flex-shrink-0" alt="Slide 2">
-            <img src="/img/JZN09155.JPG" class="w-[708px] h-[340px] object-cover flex-shrink-0" alt="Slide 3">
-            <img src="/img/JZN00454.JPG" class="w-[708px] h-[340px] object-cover flex-shrink-0" alt="Slide 4">
-            <img src="/img/JZN08605.JPG" class="w-[708px] h-[340px] object-cover flex-shrink-0" alt="Slide 5">
-            <img src="/img/JZN00969.JPG" class="w-[708px] h-[340px] object-cover flex-shrink-0" alt="Slide 6">
+            <img src="src/img/JZN00920.JPG" class="w-[708px] h-[340px] object-cover flex-shrink-0" alt="Slide 1">
+            <img src="src/img/JZN08605.JPG" class="w-[708px] h-[340px] object-cover flex-shrink-0" alt="Slide 2">
+            <img src="src/img/JZN09155.JPG" class="w-[708px] h-[340px] object-cover flex-shrink-0" alt="Slide 3">
+            <img src="src/img/JZN00454.JPG" class="w-[708px] h-[340px] object-cover flex-shrink-0" alt="Slide 4">
+            <img src="src/img/JZN08605.JPG" class="w-[708px] h-[340px] object-cover flex-shrink-0" alt="Slide 5">
+            <img src="src/img/JZN00969.JPG" class="w-[708px] h-[340px] object-cover flex-shrink-0" alt="Slide 6">
           </div>
 
           <!-- Navigation buttons -->
@@ -180,8 +180,8 @@
           Menciptakan
           Lingkungan Yang Nyaman Bagi Seluruh Siswa/i Yang Berlandaskan Kepada Al Qur'an Dan Hadits</p>
         <div class="flex gap-3 mt-2">
-          <div class="w-6 h-6"><img src="/img/Instagram.png" alt=""></div>
-          <div class="w-6 h-6"><img src="/img/YouTube.png" alt=""></div>
+          <div class="w-6 h-6"><img src="src/img/Instagram.png" alt=""></div>
+          <div class="w-6 h-6"><img src="src/img/YouTube.png" alt=""></div>
         </div>
       </div>
       <!-- Quick Link -->
