--- a/sekbid1.html
+++ b/sekbid1.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Argantara Diratama - About</title>
-  <link href="./output.css" rel="stylesheet">
+  <link href="src/output.css" rel="stylesheet">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-  <link rel="icon" href="/img/logo 2.png">
+  <link rel="icon" href="src/img/logo 2.png">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
   <style>
     html {
@@ -50,18 +50,18 @@
   <nav class="fixed top-4 z-50 flex justify-between items-center px-12 w-1480 h-100
             bg-[#222831]/50 backdrop-blur-md rounded-4xl">
     <div class="flex items-center gap-3">
-      <img src="/img/logo 1.png" alt="logo" class="h-14" />
+      <img src="src/img/logo 1.png" alt="logo" class="h-14" />
     </div>
     <div class="flex gap-8 text-xl">
-      <a href="/src/index.html" class="hover:text-[#DFD0B8] transition duration-300 ease-in-out">Home</a>
-      <a href="/src/about.html" class="hover:text-[#DFD0B8] transition duration-300 ease-in-out">About</a>
-      <a href="/src/proker.html" class="hover:text-[#DFD0B8] transition duration-300 ease-in-out">Program Kerja</a>
-      <a href="/src/gallery.html" class="hover:text-[#DFD0B8] transition duration-300 ease-in-out">Gallery</a>
+      <a href="/index.html" class="hover:text-[#DFD0B8] transition duration-300 ease-in-out">Home</a>
+      <a href="/about.html" class="hover:text-[#DFD0B8] transition duration-300 ease-in-out">About</a>
+      <a href="/proker.html" class="hover:text-[#DFD0B8] transition duration-300 ease-in-out">Program Kerja</a>
+      <a href="/gallery.html" class="hover:text-[#DFD0B8] transition duration-300 ease-in-out">Gallery</a>
     </div>
   </nav>
   <!-- Hero Section -->
   <section class="relative w-full flex justify-center items-center h-[1000px] overflow-hidden">
-    <img src="/img/Sekbid 1.png" class="absolute inset-0 w-full h-full object-cover brightness-50" alt="background"
+    <img src="src/img/Sekbid 1.png" class="absolute inset-0 w-full h-full object-cover brightness-50" alt="background"
       loading="lazy" />
     <div data-aos="fade-up" data-aos-anchor-placement="center-bottom"
       class="relative z-10 text-center flex flex-col items-center justify-center">
@@ -76,10 +76,10 @@
     <div data-aos="fade-up" class="w-[400px] h-0.5 bg-[#e6e0d5]"></div>
     <div class="flex flex-col gap-12">
       <div class="flex flex-row gap-12 w-full px-56">
-        <a data-aos="fade-up" href="/src/setelmurottal.html">
+        <a data-aos="fade-up" href="/setelmurottal.html">
           <div class="bg-gray-700 flex gap-6 items-center py-6 px-12 rounded-3xl shadow-2xl hover:-translate-y-1 transition duration-300 ease-in-out">
             <div class="rounded-full bg-gray-400 w-22 h-20 flex justify-center items-center">
-              <img src="/img/quran grey.svg" alt="quran" class="w-10 h-10">
+              <img src="src/img/quran grey.svg" alt="quran" class="w-10 h-10">
             </div>
             <div class="flex flex-col gap-2">
               <h1 class="text-2xl font-semibold">Setel Murotal</h1>
@@ -88,10 +88,10 @@
             </div>
           </div>
         </a>
-        <a data-aos="fade-up" href="/src/hotw.html">
+        <a data-aos="fade-up" href="/hotw.html">
           <div class="bg-gray-700 flex gap-6 items-center py-6 px-12 rounded-3xl shadow-2xl hover:-translate-y-1 transition duration-300 ease-in-out">
             <div class="rounded-full bg-gray-400 w-22 h-20 flex justify-center items-center">
-              <img src="/img/video-svgrepo-com.svg" alt="quran" class="w-10 h-10">
+              <img src="src/img/video-svgrepo-com.svg" alt="quran" class="w-10 h-10">
             </div>
             <div class="flex flex-col gap-2">
               <h1 class="text-2xl font-semibold">Hadits Of The Week</h1>
@@ -102,10 +102,10 @@
         </a>
       </div>
       <div class="flex flex-row gap-12 w-full px-56">
-        <a href="/src/ramcer.html" class="w-1/2">
+        <a href="/ramcer.html" class="w-1/2">
           <div class="bg-gray-700 flex gap-6 items-center py-6 px-12 rounded-3xl shadow-2xl hover:-translate-y-1 transition duration-300 ease-in-out">
             <div class="rounded-full bg-gray-400 w-20 h-20 flex justify-center items-center">
-              <img src="/img/moon-svgrepo-com.svg" alt="quran" class="w-10 h-10">
+              <img src="src/img/moon-svgrepo-com.svg" alt="quran" class="w-10 h-10">
             </div>
             <div class="flex flex-col gap-2">
               <h1 class="text-2xl font-semibold">Ramadhan Ceria</h1>
@@ -117,7 +117,7 @@
         <a href="" class="w-1/2">
           <div class="bg-gray-700 flex gap-6 items-center py-6 px-12 rounded-3xl shadow-2xl hover:-translate-y-1 transition duration-300 ease-in-out">
             <div class="rounded-full bg-gray-400 w-24 h-20 flex justify-center items-center">
-              <img src="/img/mosque-svgrepo-com.svg" alt="quran" class="w-10 h-10">
+              <img src="/srcimg/mosque-svgrepo-com.svg" alt="quran" class="w-10 h-10">
             </div>
             <div class="flex flex-col gap-2">
               <h1 class="text-2xl font-semibold">Isra Mi'raj</h1>
@@ -140,8 +140,8 @@
           Menciptakan
           Lingkungan Yang Nyaman Bagi Seluruh Siswa/i Yang Berlandaskan Kepada Al Qur'an Dan Hadits</p>
         <div class="flex gap-3 mt-2">
-          <div class="w-6 h-6"><img src="/img/Instagram.png" alt=""></div>
-          <div class="w-6 h-6"><img src="/img/YouTube.png" alt=""></div>
+          <div class="w-6 h-6"><img src="src/img/Instagram.png" alt=""></div>
+          <div class="w-6 h-6"><img src="src/img/YouTube.png" alt=""></div>
         </div>
       </div>
       <!-- Quick Link -->
