--- a/about.html
+++ b/about.html
@@ -53,10 +53,10 @@
       <img src="src/img/logo 1.png" alt="logo" class="h-14" />
     </div>
     <div class="flex gap-8 text-xl">
-      <a href="/index.html" class="hover:text-[#DFD0B8] transition duration-300 ease-in-out">Home</a>
-      <a href="/about.html" class="hover:text-[#DFD0B8] transition duration-300 ease-in-out">About</a>
-      <a href="/proker.html" class="hover:text-[#DFD0B8] transition duration-300 ease-in-out">Program Kerja</a>
-      <a href="/gallery.html" class="hover:text-[#DFD0B8] transition duration-300 ease-in-out">Gallery</a>
+      <a href="/argantara-diratama/index.html" class="hover:text-[#DFD0B8] transition duration-300 ease-in-out">Home</a>
+      <a href="/argantara-diratama/about.html" class="hover:text-[#DFD0B8] transition duration-300 ease-in-out">About</a>
+      <a href="/argantara-diratama/proker.html" class="hover:text-[#DFD0B8] transition duration-300 ease-in-out">Program Kerja</a>
+      <a href="/argantara-diratama/gallery.html" class="hover:text-[#DFD0B8] transition duration-300 ease-in-out">Gallery</a>
     </div>
   </nav>
   <!-- Hero Section -->
