--- a/index.html
+++ b/index.html
@@ -159,12 +159,9 @@
 
         <!-- Text Box -->
         <div data-aos="fade-up" class="bg-white/20 text-white rounded-3xl w-full md:w-1/2 p-6 md:p-8 shadow-xl">
-          <h3 class="font-bold text-2xl mb-4">MPLS PANCA AKSARA</h3>
+          <h3 class="font-bold text-2xl mb-4">!17 Agustus Gerliya</h3>
           <p class="text-xl leading-relaxed text-justify">
-            Acara ini disebut juga Masa Pengenalan Lingkungan Sekolah, adalah acara yang diselenggarakan OSIS SMK
-            Informatika Fithrah Insani pada tanggal 19–21 Maret 2025 di SMK Informatika Fithrah Insani.<br><br>
-            Kegiatan ini berisi tentang pengenalan peraturan sekolah, pengenalan guru, berbagai materi penting dan
-            kedisiplinan.
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quae eligendi modi iusto explicabo nulla repudiandae, doloremque mollitia recusandae consequuntur! Reprehenderit illo sequi excepturi maiores dicta saepe et sunt reiciendis aut?
           </p>
         </div>
       </div>
